# sandbox

./: .gitignore  svnstat.py
X11/: build.sh
X11/ex1/: ex1  example1.c
X11/ex2/: ex2  example2.c
X11/ex3/: ex3  example3.c
X11/ex4/: ex4  example4.c
X11/ex5/: ex5  example5.c
X11/simple/: Makefile  simpleWindow.cpp
X11/switcher/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  common.h  switcher.cpp  utils.cpp  utils.h
addr2line/: Makefile  addr2line.cc  addr2line2.c  main.cc  two-way-pipe.c
aio_read/: main.c
bash/: test.sh
boost/: asio_file_descriptor.cpp  spirit.cpp
cpp/Asserts/: main.cpp  mine.cpp
cpp/answer/: answer.cc
cpp/bignum/: main.cc
cpp/boost/: date_time.cpp  debug_settings.json  debug_settings.xml  filesystem.cpp  propTree.cpp  (+5 more)
cppUnit/: Main.cpp  Makefile
haskell/: checkers01.hs
localization/: Makefile  loc_test.pot  main.cpp  ru.po
logging/: Makefile  SConstruct  local_logger.cpp  local_logger.h  main.cpp
lua/: Makefile  lua.c  script.lua
luaConf/: CMakeLists.txt  LocalLua.cpp  LocalLua.h  conf.lua  main.cpp
networking/: Makefile  asio-client.cc  client.py  confirm-client.cc  confirm-server.cc  srv.cpp  udp-client.c  udp-server.c
opengl/: utils.h
parsers/: json.example  spirit_parser.cpp
python/: grepSvnLog.py  imgget.py  mathtrainer.py  nisl_tester.py  portion.py  prof.py  svn_reporter.py  svnstat.py  tcp_client.py  thumbs.py
shared_mem/: Makefile  shared.cpp
ssl/: Makefile  client.cc  server.cc
tcl/: panel.tcl  test.tcl
threads/: Makefile  main.cpp
udptest/: Makefile  run.sh  udpclient.c  udpserver.c
(+174 files in other folders)
